v0.4.0/_sources/index.rst.txt
.. title:: Home

.. raw:: html

    <div class="banner">
        <h1>PyGMT</h1>
        <h2>
            A Python interface for the
            <a href="https://www.generic-mapping-tools.org/">Generic Mapping Tools</a>
        </h2>
    </div>

.. include:: ../README.rst
    :start-after: placeholder-for-doc-index

.. toctree::
    :maxdepth: 2
    :hidden:
    :caption: Getting Started

    overview.rst
    install.rst
    tutorials/first_figure.rst

.. toctree::
    :maxdepth: 2
    :hidden:
    :caption: Examples

    gallery/index.rst
    external_resources.md

.. toctree::
    :maxdepth: 2
    :hidden:
    :caption: User Guide

    tutorials/frames.rst
    projections/index.rst
    tutorials/coastlines.rst
    tutorials/regions.rst
    tutorials/plot.rst
    tutorials/lines.rst
    tutorials/vectors.rst
    tutorials/date_time_charts.rst
    tutorials/text.rst
    tutorials/contour_map.rst
    tutorials/earth_relief.rst
    tutorials/3d_perspective_image.rst
    tutorials/insets.rst
    tutorials/subplots.rst
    tutorials/configuration.rst

.. toctree::
    :maxdepth: 2
    :hidden:
    :caption: Reference documentation

    api/index.rst
    changes.md
    contributing.md
    maintenance.md
